# SemiHS-Bench

./: .env.example  .gitignore  BALANCE_REPORT.md  CITATION.cff  DATASHEET.md  LICENSE  LICENSE-DATA  README.md  RESULTS.md  pyproject.toml
construction/: Makefile  README.md  pyproject.toml
construction/configs/: abbreviations.csv  boundary_tags.yaml  degradation_rules.yaml  hs6_scope_tiers.yaml  hs_chapters.yaml  manufacturer_caps.yaml
construction/docs/: ADJUDICATION_PROTOCOL.md  IAA_PROTOCOL.md
construction/scripts/: _release_utils.py  annotate_difficulty.py  apply_audit_decisions.py  apply_tier1_review_catalog.py  build_calibration_set.py  build_eval.py  build_hs6_dossiers.py  build_part1_release.py  build_reference_corpus.py  build_release.py  generate_review_worksheet.py  iaa_export_csv.py  ingest_bol.py  ingest_catalog.py  normalize_jp_customs.py  prefill_core4_catalog.py
construction/src/: __init__.py  models.py
construction/src/annotation/: __init__.py  authority_calibration.py  boundary_detector.py  difficulty_tagger.py  iaa_report.py
construction/src/assembly/: __init__.py  build_candidates.py
construction/tests/: __init__.py  test_annotate_difficulty.py  test_annotation.py  test_apply_audit_decisions.py  test_audit_decisions.py  test_authority_calibration.py  test_auxiliary_enricher.py  test_build_candidates.py  test_build_release.py  test_collectors.py  test_dedup.py  test_degradation.py  test_iaa_export_csv.py  test_ingest_bol.py  test_manufacturer_backfill.py  test_normalize_browser_captures.py  test_pipeline_end_to_end.py  test_text_utils.py
(+70 files in other folders)
